--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "my-app",
+  "homepage": "https://Babajide777.github.io/intro-section-with-dropdown-navigation",
+  "name": "Dropdown Navigation",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
